# aiida-user-addons

./: .gitattributes  .gitignore  .pre-commit-config.yaml  README.md  conftest.py  pyproject.toml  setup.json  setup.py
.github/workflows/: ci.yml
aiida_user_addons/: __init__.py  process_functions.py
aiida_user_addons/cmdline/: cmd_addons.py  cmd_vasp_dryrun.py
aiida_user_addons/common/: builder_updater.py  decorators.py  dictwrap.py  magmapping.py  misc.py  opthold.py  repository.py  test_opthold.py
aiida_user_addons/common/inputset/: UCLCASTEPRelaxSet.yaml  UCLPhononSet.yaml  UCLRelaxSet.yaml  base.py  castepsets.py  test_inputset.py  vaspsets.py
aiida_user_addons/cworkflows/: phonon_wc.py
aiida_user_addons/process/: battery.py  transform.py
aiida_user_addons/schedulers/: pbsarcher.py  sgenodetail.py  test_schedulers.py
aiida_user_addons/tools/: __init__.py  amset.py  battery_metrics.py  clease.py  corestates.py  dryrun.py  ewald.py  hiphive.py  neb.py  optparallel.py  pd_plotter.py  phonopy.py  plotly_layouts.json  pymatgen.py  relax_analyser.py  resutils.py  scfcheck.py  snap.py  sumo.py  sumo_bands.py  sumo_kpath.py  surfaxe.py  test_optparallel.py  vasp.py
aiida_user_addons/tools/tests/: test_sumo_api.py
aiida_user_addons/vworkflows/: bands.py  bands_deprecated.py  common.py  converge.py  delithiate.py  hubbard_u.py  magnetic.py  master.py  mixins.py  new_bands.py  new_conv.py  new_relax.py  phonon_wc.py  phonopy.py  relax.py  restart.py  vasp.py  verify.py  voltage_curve.py
aiida_user_addons/vworkflows/tests/: common.py  test_bands_wc.py  test_common.py  test_converge_wc.py  test_options.py  test_relax_wc.py  test_vasp_vwc.py  test_vasp_wc.py
aiida_user_addons/vworkflows/utils/: aiida_utils.py  bands.py  compare_bands.py  default_symbols.py  delegates.py  extended_dicts.py  inheritance.py  parameters.py  workchains.py
aiida_user_addons/vworkflows/utils/fixtures/: __init__.py  calcs.py  data.py  environment.py  testdata.py  workchains.py
aiida_user_addons/vworkflows/utils/tests/: test_aiida_utils.py  test_delegate.py  test_extended_dicts.py  (+2 more)
docs/source/: conf.py  index.rst
docs/source/module_guide/: calculations.rst  data.rst  index.rst  parsers.rst
docs/source/user_guide/: get_started.rst  index.rst
example_notebooks/: POSCAR.NaCl  autoparallel-example.ipynb  dryrun-example.ipynb  lfp-bands.ipynb  lfp-conv.ipynb  lfp-test.ipynb  phonon  phonopy_example.ipynb  relax  relaxworkchain-example.ipynb
tests/: manual_test_bands.py  test_bands.py  test_builder_updater.py  test_common.py  test_ewald.py  test_inputset.py  test_magmapping.py  test_opthold.py  test_options.py  test_optparallel.py  test_relax_wc.py  test_schedulers.py  test_sumo_api.py
(+4 files in other folders)
